# squad-game

./: .gitignore  Makefile  Procfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: django.yml
squad_game/: manage.py
squad_game/games/: admin.py  models.py  urls.py  views.py
squad_game/games/migrations/: 0001_initial.py  0002_gameplayer_is_accepted.py  0003_game_created_at_game_updated_at_and_more.py
squad_game/games/templates/games/: base.html  create.html  game.html  template.html
squad_game/squad_game/: asgi.py  settings.py  urls.py  wsgi.py
squad_game/static/: style.css
