[tool.poetry]
name = "squad-game"
version = "0.1.0"
description = ""
authors = ["Ricardo Dani <ricardodani@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.3"
gunicorn = "^20.1.0"
whitenoise = "^6.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
